syntax = "proto3";
package gps;

message GpsRequest {
    string Address = 1;
}

message GetLocationResponse {
    double Latitude = 1;
    double Longitude = 2;
}

message GetAltitudeResponse {
    float Altitude = 1;
}

message HasFixResponse {
    bool HasFix = 1;
}

message GetSpeedResponse {
    float SpeedOverGround = 1;
}

message GetHeadingResponse {
    float Heading = 1;
}

message GetNumSatellitesResponse {
    uint32 Count = 1;
}

message GetAccuracyResponse {
    float Accuracy = 1;
}

message GetFullReportResponse {
    bool HasFix = 1;
    double Latitude = 2;
    double Longitude = 3;
    float Altitude = 4;
    float SpeedOverGround = 5;
    float Heading = 6;
    uint32 SatelliteCount = 7;
    float VerticalAccuracy = 8;
    float HorizontalAccuracy = 9;
}

service Gps {
    rpc GetLocation (GpsRequest) returns (GetLocationResponse);
    rpc GetAltitude (GpsRequest) returns (GetAltitudeResponse);
    rpc HasFix (GpsRequest) returns (HasFixResponse);
    rpc GetSpeed (GpsRequest) returns (GetSpeedResponse);
    rpc GetHeading (GpsRequest) returns (GetHeadingResponse);
    rpc GetNumSatellites (GpsRequest) returns (GetNumSatellitesResponse);
    rpc GetFullReport (GpsRequest) returns (GetFullReportResponse);
    rpc GetVerticalAccuracy (GpsRequest) returns (GetAccuracyResponse);
    rpc GetHorizontalAccuracy (GpsRequest) returns (GetAccuracyResponse);
}